Quorum/Library/Tests/Actions/Pass/NestedFunctionCallDouble.quorum
class Main
    action Main
       number a = multiply(multiply(3.0, 5.0), multiply(4.0, 5.0))
       output a
    end

    action multiply(number a, number b) returns number
        return a * b
    end
end