Quorum/Library/Tests/Actions/Fail/SameParameterName.quorum
class Main
    action Main
        //This should be a compiler error
        Test(5,6)
    end
    action Test(number y, number y)
        output y
    end
end